--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,17 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/>
+	  <link rel="stylesheet" type="text/css" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
 </head>
 <body>
-  <app-root></app-root>
+	<div class="flex-container">
+	  <app-root></app-root>	
+	</div>
+
+  <script src="assets/js/Chart.min.js"></script>
+  
 </body>
 </html>
